fix: alignment not working in firefox

--- a/src/styles/gui-elements/elements/text.scss
+++ b/src/styles/gui-elements/elements/text.scss
@@ -1,4 +1,6 @@
 .gui-element-text {
-  padding: 0;
-  margin: 0;
+  p {
+    padding: 0;
+    margin: 0;
+  }
 }
